# sdm

./: CMakeLists.txt
src/: test_model.cpp  train_model.cpp
src/include/: feature_descriptor.cpp  feature_descriptor.h  helper.h  ldmarkmodel.cpp  ldmarkmodel.h  modelcfg.h  sdm.cpp  sdm.h
